# Health

./: Beer.json  FoodExpense.json  README.md  Smoking.json  Sport.json  Sport.py  Step.json  Stock.json  Weight.json  average.py  plot.py  pyproject.toml
data/: Beer.json  FoodExpense.json  Smoking.json  Sport.json  Step.json  Stock.json
healthmanagement/: Sport.py  average.py  plot.py
